--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -5,6 +5,7 @@
 
     <!--标题栏-->
     <RelativeLayout
+        android:id="@+id/rl_category_top"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/themeColor1">
@@ -12,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="分类"
+            android:text="直播分类"
             android:textColor="@color/colorWhite"
             android:textSize="22dp"
             android:layout_centerInParent="true"
@@ -32,12 +33,26 @@
             />
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="这是分类的fragment"
-        android:textSize="30dp"
-        />
+<!--    <org.live.common.view.ForbidReloadGridView
+        android:id="@+id/gv_category_hold"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/rl_category_top"
+        android:scrollbars="none"
+        android:verticalSpacing="12dp"
+        android:horizontalSpacing="8dp"
+        android:padding="7dp"
+        android:numColumns="3">
+    </org.live.common.view.ForbidReloadGridView>-->
+
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/rv_category_hold"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/rl_category_top"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp">
+    </com.jcodecraeer.xrecyclerview.XRecyclerView>
+
 
 </RelativeLayout>
