--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,10 @@
     <color name="colorDeepGray">#969696</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorShallowBlack">#252121</color><!-- 浅黑 -->
+    <color name="colorShallowBlack">#494444</color><!-- 浅黑 -->
     <color name="colorShallowBlue">#5CACEE</color><!-- 浅蓝 -->
     <color name="colorBlue">#1874CD</color><!-- 深蓝 -->
-    <color name="colorWhite2">#FFFAFA</color>
+    <color name="colorWhite2">#f8f4f4</color>
     <color name="colorGold">#DAA520</color>
     <!-- 这个系统的主题颜色 -->
     <color name="themeColor">#2CE1B3</color>
