--- a/app/src/main/res/drawable/shape_green_corners_button_pressed.xml
+++ b/app/src/main/res/drawable/shape_green_corners_button_pressed.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="20.0px" />
-    <solid android:color="@color/colorBlue" />
+    <corners android:radius="50dp" />
+    <solid android:color="@color/themeColor1" />
 </shape>
