--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,18 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <!-- toolbar（actionbar）颜色 -->
+        <item name="colorPrimary">@color/themeColor</item>
+        <!-- 状态栏颜色 -->
         <item name="colorPrimaryDark">@color/themeColor1</item>
-        <item name="colorAccent">@color/colorGray</item>
+        <!-- 窗口的背景颜色 -->
+   <!--     <item name="android:windowBackground">@color/colorWall</item>-->
+        <item name="colorAccent">@color/colorPrimary</item>
+        <!-- AppCompatEditText默认状态状态设置底线颜色 -->
+        <item name="colorControlNormal">@color/colorGray</item>
+        <!-- AppCompatEditText选择的底线颜色 -->
+        <item name="colorControlActivated">@color/themeColor</item>
     </style>
 </resources>
