暂存一版本，解决merge问题

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWall"
-    tools:context="org.live.module.login.view.LoginActivity">
+    tools:context="org.live.module.login.view.impl.LoginActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/tb_login"
