--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="25dp"
         android:textColorHint="@color/colorGray"
         android:hint="输入账户"
+        android:text="201335020246"
         android:textCursorDrawable="@drawable/shape_cursor_color" />
     <!-- 密码输入框 -->
     <EditText
@@ -22,7 +23,7 @@
         android:layout_marginTop="25dp"
         android:textColorHint="@color/colorGray"
         android:hint="输入密码"
-
+        android:text="xudan930318"
         android:inputType="textPassword"
         android:textCursorDrawable="@drawable/shape_cursor_color" />
 
