--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -2,43 +2,112 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWall">
 
-    <!--标题栏-->
     <RelativeLayout
+        android:id="@+id/rl_me_cover"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="230dp"
         android:background="@color/themeColor1">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="我的"
-            android:textColor="@color/colorWhite"
-            android:textSize="22dp"
             android:layout_centerInParent="true"
-            />
-        <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/btn_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:scaleType="center"
-            app:materialIcon="account_settings_variant"
-            app:materialIconColor="@color/colorWhite"
-            app:materialIconSize="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:layout_centerVertical="true"
-            />
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_me_head_image"
+                android:layout_width="125dp"
+                android:layout_height="125dp" />
+
+            <TextView
+                android:id="@+id/tv_me_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_me_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/rl_me_listView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="这是'我的'的fragment"
-        android:textSize="30dp"
-        />
+        android:layout_below="@id/rl_me_cover"
+        android:layout_marginTop="@dimen/custom_activity_vertical_margin"
+        android:background="@color/colorWhite">
+
+        <ListView
+            android:id="@+id/lv_me"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+
+            android:background="@color/colorWhite" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_me_listView"
+        android:layout_marginTop="15dp"
+        android:background="@color/colorWhite">
+
+        <LinearLayout
+            android:id="@+id/ll_me_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_me_logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:text="退出登录"
+                    android:textColor="@color/colorDeepGray"
+                    android:textSize="16sp" />
+
+                <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/icon_demo_chevron_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:padding="5dp"
+                    android:scaleType="center"
+                    app:materialIcon="chevron_right"
+                    app:materialIconColor="@color/colorGray"
+                    app:materialIconSize="@dimen/icon_recorder_size" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
