--- a/app/src/main/res/layout/activity_single_category.xml
+++ b/app/src/main/res/layout/activity_single_category.xml
@@ -33,16 +33,23 @@
             android:layout_centerInParent="true"
             />
     </RelativeLayout>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sl_singleCategory_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_singleCategory_top"
+        android:layout_marginTop="10dp">
     
-    <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/rv_singleCategory_liveRoomHold"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:layout_below="@id/rl_singleCategory_top">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_singleCategory_liveRoomHold"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp">
 
+        </android.support.v7.widget.RecyclerView>
 
-    </com.jcodecraeer.xrecyclerview.XRecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>1
 
 </RelativeLayout>
