--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -75,6 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:clickable="true"
+            android:background="@drawable/selector_ll_corners"
             android:orientation="horizontal">
 
             <RelativeLayout
