直播间加载

--- a/app/src/main/res/layout/activity_single_category.xml
+++ b/app/src/main/res/layout/activity_single_category.xml
@@ -50,6 +50,6 @@
 
         </android.support.v7.widget.RecyclerView>
 
-    </android.support.v4.widget.SwipeRefreshLayout>1
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
