搜索直播间完成

--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -22,6 +22,6 @@
         android:textColor="@color/colorShallowBlack"
         android:textSize="13dp"
         android:text="这是我的分类"
-        />
+        android:singleLine="true" />
 
 </RelativeLayout>
