--- a/app/src/main/res/layout/activity_search_room.xml
+++ b/app/src/main/res/layout/activity_search_room.xml
@@ -3,4 +3,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--标题栏-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/rl_search_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize">
+
+        <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/btn_search_return"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="center"
+            app:materialIcon="chevron_left"
+            app:materialIconColor="@color/colorWhite"
+            app:materialIconSize="35dp"
+            android:layout_gravity="left|center_vertical"
+             />
+        <EditText
+            android:id="@+id/et_search_input"
+            android:layout_width="255dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center|center_vertical"
+            android:hint="主播号|房间号|主播昵称|房间名"
+            android:textColorHint="@color/colorShallowGray"
+            android:textColor="@color/colorShallowBlack"
+            android:background="@drawable/bg_search_edittext"
+            android:layout_marginLeft="1dp"
+            />
+        <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/btn_search_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:scaleType="center"
+            app:materialIcon="magnify"
+            app:materialIconColor="@color/colorWhite"
+            app:materialIconSize="28dp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="10dp" />
+    </android.support.v7.widget.Toolbar>
+
+    <ImageView
+        android:id="@+id/iv_search_notFound"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:src="@drawable/hint_404"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/rl_search_top"
+        android:visibility="gone" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sl_search_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_search_top"
+        android:layout_marginTop="10dp">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_search_liveRoomHold"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
