--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rl_home_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/themeColor"
         android:minHeight="?attr/actionBarSize">
         <TextView
             android:layout_width="wrap_content"
