--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -12,7 +12,7 @@
         android:minHeight="?attr/actionBarSize">
 
         <TextView
-            android:id="@+id/tv_login_title"
+            android:id="@+id/tv_live_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -24,31 +24,41 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_below="@id/tb_live"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_live"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="80dp"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_below="@id/tb_live">
 
-        <ImageView
-            android:layout_width="180dp"
-            android:layout_height="210dp"
-            android:src="@drawable/hint_be_anchor2" />
 
-        <TextView
-            android:id="@+id/tv_live_be_anchor"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/ll_live_be_anchor"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:clickable="true"
-            android:text="@string/be_anchor"
-            android:textColor="@color/selector_text_press_color"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_below="@id/tb_live"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="180dp"
+                android:layout_height="210dp"
+                android:src="@drawable/hint_be_anchor2"
+                android:id="@+id/imageView" />
+
+            <TextView
+                android:id="@+id/tv_live_be_anchor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:clickable="true"
+                android:text="@string/be_anchor"
+                android:textColor="@color/selector_text_press_color"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </RelativeLayout>
