--- a/app/src/main/res/layout/item_live_room.xml
+++ b/app/src/main/res/layout/item_live_room.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:padding="1dp">
 
     <!--直播间封面-->
     <ImageView
@@ -54,7 +55,7 @@
             app:materialIcon="eye_outline"
             android:paddingTop="1dp"
             app:materialIconColor="@color/colorGray"
-            app:materialIconSize="17dp"
+            app:materialIconSize="14dp"
             android:layout_marginRight="3dp"
             />
         <!-- 直播在线人数 -->
