--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <!-- 播放器的view -->
     <com.tencent.rtmp.ui.TXCloudVideoView
         android:id="@+id/vv_play_player"
@@ -16,7 +16,8 @@
         android:id="@+id/iv_play_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/bg"
+        android:src="@drawable/loading_live_room"
+        android:visibility="visible"
         android:scaleType="fitXY"
         />
 
@@ -25,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"
+        android:visibility="visible"
         />
 
     <RelativeLayout
@@ -63,7 +64,45 @@
             app:materialIconSize="@dimen/icon_recorder_size"
             android:layout_alignParentRight="true"
             />
+    </RelativeLayout>
 
+    <!-- 直播间信息 -->
+    <RelativeLayout
+        android:id="@+id/rl_play_liveroom_info"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:background="@drawable/shape_corners_liveroom_info"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="1dp"
+        android:paddingLeft="1dp"
+        android:paddingBottom="1dp">
+        <ImageView
+            android:id="@+id/iv_play_headImg"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/hint_404"/>
+        <TextView
+            android:id="@+id/tv_play_liveRoomName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="主播名称"
+            android:textColor="@color/colorWhite"
+            android:textSize="15dp"
+            android:layout_toRightOf="@id/iv_play_headImg"
+            android:layout_marginLeft="5dp"/>
+        <TextView
+            android:id="@+id/tv_play_onlineCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="111"
+            android:textColor="@color/colorWhite"
+            android:textSize="12sp"
+            android:layout_toRightOf="@id/iv_play_headImg"
+            android:layout_below="@id/tv_play_liveRoomName"
+            android:layout_marginLeft="5dp"/>
     </RelativeLayout>
 
 
